--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -1,5 +1,7 @@
+<h1>All Peeps</h1>
+
 <ul>
   <% @peeps.each do | peep | %>
-    <li><%= peep %></li>
+    <li><%= peep.message %></li>
   <% end %>
 </ul>
