--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -2,6 +2,13 @@
 
 <ul>
   <% @peeps.each do | peep | %>
-    <li><%= peep.message %></li>
+    <li><%= peep.text %></li>
   <% end %>
 </ul>
+
+<h1>Post a peep!</h1>
+<form action="/post_peep" method="post">
+    <label for="text">Message:</label>
+    <input type="text" name="text" required><br>
+    <button type="submit" value="Post peep">Post peep</button>
+</form>
