--- a/views/account/new.erb
+++ b/views/account/new.erb
@@ -1,16 +1,17 @@
 <h1>Sign up to Chitter!</h1>
-<form action="/account/new" method="post">
-    <label for="name">Name:</label>
-    <input type="text" name="name" required><br>
 
-    <label for="username">Username:</label>
-    <input type="text" name="username" required><br>
+<form action="/signup" method="post">
+  <label for="name">Name:</label>
+  <input type="text" name="name" required><br>
 
-    <label for="email">Email:</label>
-    <input type="email" name="email" required><br>
+  <label for="username">Username:</label>
+  <input type="text" name="username" required><br>
 
-    <label for="password">Password:</label>
-    <input type="password" name="password" required><br>
+  <label for="email">Email:</label>
+  <input type="email" name="email" required><br>
 
-    <button type="submit" value="Sign up">Sign up!</button>
+  <label for="password">Password:</label>
+  <input type="password" name="password" required><br>
+
+  <button type="submit" value="Sign up">Sign up!</button>
 </form>
