--- a/views/account/login.erb
+++ b/views/account/login.erb
@@ -1,11 +1,22 @@
-<h1>Log in to Chitter!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Chitter</title>
+    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
+  </head>
+  <body>
+  
+    <h1>Log in to Chitter!</h1>
+    <div id="content">
+      <form action="/login" method="post">
+        <input type="email" name="email" placeholder="Email" required><br/>
+        <input type="password" name="password" placeholder="Password" required><br/>
+        <input type="submit" value="Login" id="login_button"></button>
+      </form>
+    </div>
 
-<form action="/login" method="post">
-  <label for="email">Email:</label>
-  <input type="email" name="email"><br>
-
-  <label for="password">Password:</label>
-  <input type="password" name="password"><br>
-
-  <button type="submit" value="Log in">Login</button>
-</form>
+  </body>
+</html>
