--- a/views/account/new.erb
+++ b/views/account/new.erb
@@ -1,17 +1,25 @@
-<h1>Sign up to Chitter!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Chitter</title>
+    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
+  </head>
+  <body>
+  
+    <h1>Sign up to Chitter!</h1>
+    <div id="content">
+      <form action="/signup" method="post">
+        <input type="text" name="name" placeholder="Name" required><br>
+        <input type="text" name="username" placeholder="Username" required><br>
+        <input type="email" name="email" placeholder="Email" required><br>
+        <input type="password" name="password" placeholder="Password" required><br>
+        <input type="password" name="password_confirmation" placeholder="Confirm password" required><br/>
+        <input type="submit" value="Signup!" id="signup_button"></button>
+      </form>
+    </div>
 
-<form action="/signup" method="post">
-  <label for="name">Name:</label>
-  <input type="text" name="name" required><br>
-
-  <label for="username">Username:</label>
-  <input type="text" name="username" required><br>
-
-  <label for="email">Email:</label>
-  <input type="email" name="email" required><br>
-
-  <label for="password">Password:</label>
-  <input type="password" name="password" required><br>
-
-  <button type="submit" value="Sign up">Sign up!</button>
-</form>
+  </body>
+</html>
