--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
       <div id="post_peep">
         <% if @name %>
           <form action="/post_peep" method="post">
-            <input type="text" name="text" placeholder="Message" required>
+            <input type="text" name="text" placeholder="Message" id="text" required>
             <input type="submit" value="Peep!"></button>
           </form>
         <% end %>
