--- a/public/style.css
+++ b/public/style.css
@@ -98,6 +98,7 @@ ul {
 
 li {
   background: #555;
+  box-shadow: inset 0px 0px 10px -5px #000000;
   margin-bottom: 7px;
   padding: 5px 10px;
 }
@@ -128,6 +129,13 @@ ul li:nth-child(odd) {
   color: #aaa;
 }
 
+#peep_time {
+  text-align: right;
+  font-weight: 300;
+  float: right;
+  color: #aaa;
+}
+
 #peep_text {
   color: white;
   padding: 5px 10px;
@@ -135,7 +143,7 @@ ul li:nth-child(odd) {
   box-decoration-break: clone;
   text-align: left;
   margin: 0px;
-  padding: 0 20px 0;
+  padding: 10px 20px 10px;
   text-align: justify;
 }
 
@@ -165,4 +173,10 @@ a:active {
   text-decoration: none;
   margin-left: 10px;
   color: orange;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, #6660, #999F, #6660);
 }
