--- a/views/index.erb
+++ b/views/index.erb
@@ -37,8 +37,10 @@
         <ul>
           <% @peeps.reverse_each do |peep| %>
             <li class="peep" id="<%= peep.id %>">
-              <span id="poster_name"><%= "#{peep.get_user_info.name}" %></span>
-              <span id="poster_username"><%= "@#{peep.get_user_info.username}" %></span>
+              <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
+              <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
+              <span id="peep_time"><%= peep.post_time %></span>
+              <hr>
               <p id="peep_text"><%= peep.text %></p>
             </li>
           <% end %>
