Changed post_time column in db from STRING to TIMESTAMP, added methods to change date format, added helper methods

--- a/views/account/login.erb
+++ b/views/account/login.erb
@@ -11,7 +11,7 @@
   
     <h1>Log in to Chitter!</h1>
     <div id="content">
-      <form action="/login" method="post">
+      <form id="login" action="/login" method="post">
         <input type="email" name="email" placeholder="Email" required><br/>
         <input type="password" name="password" placeholder="Password" required><br/>
         <input type="submit" value="Login" id="login_button"></button>
