--- a/views/account/new.erb
+++ b/views/account/new.erb
@@ -11,7 +11,7 @@
   
     <h1>Sign up to Chitter!</h1>
     <div id="content">
-      <form action="/signup" method="post">
+      <form id="signup" action="/signup" method="post">
         <input type="text" name="name" placeholder="Name" required><br>
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="email" name="email" placeholder="Email" required><br>
