--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,11 @@ body {
   text-align: left;
 }
 
+* {
+  border-radius: 5px;
+  text-shadow: 1px 1px #333;
+}
+
 #content {
   display: flex;
   justify-content: center;
@@ -14,11 +19,12 @@ body {
 #navbar {
   background: #666;
   width: 50%;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 5px;
   font-weight: 500;
   font-size: 16pt;
   padding: 5px;
   border: 2px solid orange;
+  box-shadow: inset 0px 0px 10px -5px #000000, 0px 0px 10px -5px #000000;
 }
 
 #welcome {
@@ -49,19 +55,27 @@ input[type=text], input[type=password], input[type=email], input[type=submit] {
   font-family: 'Rubik', sans-serif;
   border: none;
   color: white;
-  font-size: 16pt;
+  font-size: 14pt;
   padding: 5px 10px;
   text-decoration: none;
   border: 2px solid orange;
 }
 
+#login, #signup {
+  border: 1px solid orange;
+  padding: 10px;
+  box-shadow: inset 0px 0px 10px -3px #000000, 0px 0px 10px -3px #000000;
+}
+
 #login_button, #signup_button {
   width: 100%;
   margin-top: 10px;
+  box-shadow: inset 0px 0px 10px -3px #000000, 0px 0px 10px -3px #000000;
 }
 
 input[type=text], input[type=password], input[type=email] {
   margin-bottom: 5px;
+  box-shadow: inset 0px 0px 10px -3px #000000, 0px 0px 10px -3px #000000;
 }
 
 #text {
@@ -87,6 +101,12 @@ input[type=submit]:focus, input[type=submit]:hover {
 input[type=submit] {
   float: right;
   margin-left: 10px;
+  box-shadow: inset 0px 0px 10px -3px #000000, 0px 0px 10px -3px #000000;
+}
+
+input[type=submit]:active {
+  float: right;
+  margin-left: 20px;
 }
 
 ul {
@@ -98,8 +118,8 @@ ul {
 
 li {
   background: #555;
-  box-shadow: inset 0px 0px 10px -5px #000000;
-  margin-bottom: 7px;
+  box-shadow: inset 0px 0px 10px -3px #000000, 0px 0px 10px -3px #000000;
+  margin-bottom: 10px;
   padding: 5px 10px;
 }
 
@@ -126,7 +146,7 @@ ul li:nth-child(odd) {
 #poster_username {
   text-align: left;
   font-weight: 300;
-  color: #aaa;
+  color: #ccc;
 }
 
 #peep_time {
