--- a/views/index.erb
+++ b/views/index.erb
@@ -39,7 +39,7 @@
             <li class="peep" id="<%= peep.id %>">
               <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
               <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
-              <span id="peep_time"><%= peep.post_time %></span>
+              <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
               <hr>
               <p id="peep_text"><%= peep.text %></p>
             </li>
