--- a/views/account/profile.erb
+++ b/views/account/profile.erb
@@ -40,15 +40,17 @@
       <div id="peeps">
         <ul>
           <% @peeps.reverse_each do |peep| %>
-            <li class="peep" id="<%= peep.id %>">
-              <a href="<%= "#{peep.find_user_info.username}" %>">
-                <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
-                <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
-              </a>
-              <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
-              <hr>
-              <p id="peep_text"><%= peep.text %></p>
-            </li>
+            <% if peep.find_user_info.username == @profile %>
+              <li class="peep" id="<%= peep.id %>">
+                <a href="<%= "#{peep.find_user_info.username}" %>">
+                  <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
+                  <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
+                </a>
+                <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
+                <hr>
+                <p id="peep_text"><%= peep.text %></p>
+              </li>
+            <% end %>
           <% end %>
         </ul>
       </div>
