--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chitter - Home</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <title>Home - Chitter</title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
           <li><a href="/login">Login</a></li>
           <li><a href="/signup">Sign up</a></li>
         <% else %>
-          <li><a href="<%= @username %>" id="user_profile"><%= "#{@name} @#{@username}" %></a></li>
+          <li><a href="users/<%= @username %>" id="user_profile"><%= "#{@name} @#{@username}" %></a></li>
           <li><a href="/logout">Logout</a></li>
         <% end %>
       </ul>
@@ -36,13 +36,13 @@
         <ul>
           <% @peeps.reverse_each do |peep| %>
             <li class="peep" id="<%= peep.id %>">
-              <a href="<%= "#{peep.find_user_info.username}" %>">
+              <a href="<%= "users/#{peep.find_user_info.username}" %>">
                 <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
                 <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
+              </a>
                 <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
                 <hr>
-                <p id="peep_text"><%= peep.text %></p>
-              </a>
+                <p id="peep_text"><%= peep.check_hashtag(peep.text, "index") %></p>
             </li>
           <% end %>
         </ul>
