--- a/views/account/new.erb
+++ b/views/account/new.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Chitter</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
