--- a/views/index.erb
+++ b/views/index.erb
@@ -43,6 +43,17 @@
                 <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
                 <hr>
                 <p id="peep_text"><%= peep.check_hashtag(peep.text, "index") %></p>
+
+                <% if session[:id] == peep.find_user_info.id %>
+
+                  <form action="/delete/<%= peep.id %>" method="post">
+                    <input id="hidden" type="hidden" name="_method" value="delete">
+                    <input type="submit" value="Delete" id="delete_peep">
+                  </form>
+
+
+                <% end %>
+
             </li>
           <% end %>
         </ul>
