--- a/views/index.erb
+++ b/views/index.erb
@@ -6,10 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
-    <script type="text/javascript"  src="javascripts/character_count.js"></script>
+    <script type="text/javascript" src="javascripts/character_count.js"></script>
+    <script type="text/javascript" src="javascripts/change_border.js"></script>
   </head>
   <body>
+<script>
 
+</script>
     <div id="content">
       <ul id="navbar_links">
         <li><a href="/">Home</a></li>
@@ -35,26 +38,22 @@
       <div id="peeps">
         <ul>
           <% @peeps.reverse_each do |peep| %>
-            <li class="peep" id="<%= peep.id %>">
+            <li id="<%= peep.id %>">
               <a href="<%= "users/#{peep.find_user_info.username}" %>">
                 <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
                 <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
               </a>
-                <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
+              <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
+              <hr>
+              <p id="peep_text"><%= peep.check_hashtag(peep.text, "index") %></p>
+              <% if session[:id] == peep.find_user_info.id %>
                 <hr>
-                <p id="peep_text"><%= peep.check_hashtag(peep.text, "index") %></p>
-
-                <% if session[:id] == peep.find_user_info.id %>
-
-                  <form action="/delete/<%= peep.id %>" method="post">
-                    <input id="hidden" type="hidden" name="_method" value="delete">
-                    <input type="submit" value="Delete" id="delete_peep">
-                  </form>
-
-
-                <% end %>
-
-            </li>
+                <form action="/delete/<%= peep.id %>" method="post">
+                  <input id="hidden" type="hidden" name="_method" value="delete">
+                  <input type="submit" value="Delete" id="delete_peep" onmouseover="RedBorder(this)" onmouseout="NormalBorder(this);">
+                </form>
+              <% end %>
+          </li>
           <% end %>
         </ul>
       </div>
