--- a/views/account/profile.erb
+++ b/views/account/profile.erb
@@ -41,7 +41,7 @@
         <ul>
           <% @peeps.reverse_each do |peep| %>
             <% if peep.find_user_info.username == @profile %>
-              <li class="peep" id="<%= peep.id %>">
+              <li id="<%= peep.id %>">
                 <a href="<%= "#{peep.find_user_info.username}" %>">
                   <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
                   <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
