--- a/views/hashtag.erb
+++ b/views/hashtag.erb
@@ -44,7 +44,7 @@
                 </a>
                 <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
                 <hr>
-                <p id="peep_text"><%= peep.check_hashtag(peep.text, "hashtag") %></p>
+                <p id="peep_text"><%= peep.check_interacton(peep.text, "hashtag") %></p>
                 <% if session[:id] == peep.find_user_info.id %>
                   <hr>
                   <form action="/delete/<%= peep.id %>" method="post">
