--- a/views/index.erb
+++ b/views/index.erb
@@ -45,7 +45,7 @@
               </a>
               <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
               <hr>
-              <p id="peep_text"><%= peep.check_hashtag(peep.text, "index") %></p>
+              <p id="peep_text"><%= peep.check_interacton(peep.text, "index") %></p>
               <% if session[:id] == peep.find_user_info.id %>
                 <hr>
                 <form action="/delete/<%= peep.id %>" method="post">
